# blackrose-website

./: .gitignore
blackrose-website-backend/: Cargo.toml  README.md  REST_API.md
blackrose-website-backend/db/: .env  docker-compose.yml
blackrose-website-backend/migrations/2023-04-15-162814_users-blogposts-comments/: down.sql  up.sql
blackrose-website-backend/migrations/2023-04-30-050047_add-unique-email/: down.sql  up.sql
blackrose-website-backend/migrations/2023-05-03-054307_token_registration/: down.sql  up.sql
blackrose-website-backend/src/: authentication.rs  email.rs  errors.rs  handlers.rs  home.rs  main.rs  state.rs  utils.rs
blackrose-website-backend/src/authentication/: auth.rs  errors.rs  login.rs  registration.rs  validation.rs
blackrose-website-backend/src/database/: db.rs  models.rs  schema.rs
blackrose-website-backend/templates/: registration_confirmation.html  registration_confirmation_email.html
blackrose-website-frontend/: confirmation.css  confirmation.html  email.css  email.html  index.html
