[package]
name = "blackrose-website-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
diesel = { version = "2.0.3", features = ["postgres", "uuid"] }
diesel-async = { version = "0.2.2", features = ["postgres"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
