[package]
name = "blackrose-website-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["headers", "macros"] }
axum-extra = { version = "0.7.4", features = ["typed-routing"] }
bcrypt = "0.14.0"
diesel = { version = "2.0.3", features = ["postgres", "uuid"] }
diesel-async = { version = "0.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
